--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-easyocr = "*"
-opencv-contrib-python = "*"
 inference-sdk = "*"
+ultralytics = "*"
+pytesseract = "*"
+easyocr = "*"
+opencv-python = "*"
 
 [dev-packages]
 
